--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Selenity Job Evaluator</title>
+  <title>Ship Shape</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, viewport-fit=cover" />
   <link href="https://fonts.googleapis.com/css?family=Exo:900i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap" rel="stylesheet">
